refactor: :recycle: update string format implementation